// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post Block Components should render correctly 1`] = `
<div
  className="post-block"
>
  <div
    className="post-info"
  >
    <span
      className="post-user-and-visibility"
    >
      username
    </span>
    <DropdownButton
      alignRight={true}
      drop="down"
      id="post-more-button"
      title={
        <img
          alt="more-icon"
          id="post-more-icon"
          src="more-icon.svg"
        />
      }
    >
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "SafeAnchor",
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Edit
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "SafeAnchor",
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Delete
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "SafeAnchor",
            "render": [Function],
          }
        }
        disabled={false}
        href="#"
      >
        Copy Link
      </DropdownItem>
    </DropdownButton>
    <div
      className="post-time"
    >
      a few seconds ago
    </div>
  </div>
  <img
    alt="more-icon"
    className="post-img"
    src="demo-img.png"
  />
  <ReactMarkdown
    astPlugins={Array []}
    className="post-content"
    escapeHtml={true}
    parserOptions={Object {}}
    plugins={
      Array [
        [Function],
      ]
    }
    rawSourcePos={false}
    renderers={Object {}}
    skipHtml={false}
    source="content"
    sourcePos={false}
    transformLinkUri={[Function]}
  />
  <div>
    <button
      aria-controls="post-comments"
      aria-expanded={false}
      className="post-show-comment"
      onClick={[Function]}
      type="button"
    >
      1
       
      comment
    </button>
    <Collapse
      appear={false}
      dimension="height"
      getDimensionValue={[Function]}
      in={false}
      mountOnEnter={false}
      timeout={300}
      unmountOnExit={false}
    >
      <div>
        <div
          id="comment-list"
        >
          <div
            key="95c76f63-5579-45f6-810f-e0665f2ea588"
          >
            <p>
              commentAuthor:
              <span
                className="comment-content"
              >
                Sample Comment
              </span>
            </p>
          </div>
        </div>
      </div>
    </Collapse>
    <form
      action="submit"
      className="make-comment-input-wrapper"
      onSubmit={[Function]}
    >
      <TextareaAutosize
        className="post-comment-text-area"
        inputRef={[Function]}
        onChange={[Function]}
        onHeightChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Add a comment"
        useCacheForDOMMeasurements={false}
        value=""
      />
    </form>
  </div>
</div>
`;

exports[`Post Block Components should render markdown content correctly 1`] = `
<div
  className="post-block"
>
  <div
    className="post-info"
  >
    <span
      className="post-user-and-visibility"
    >
      username
    </span>
    <DropdownButton
      alignRight={true}
      drop="down"
      id="post-more-button"
      title={
        <img
          alt="more-icon"
          id="post-more-icon"
          src="more-icon.svg"
        />
      }
    >
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "SafeAnchor",
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Edit
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "SafeAnchor",
            "render": [Function],
          }
        }
        disabled={false}
        onClick={[Function]}
      >
        Delete
      </DropdownItem>
      <DropdownItem
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "SafeAnchor",
            "render": [Function],
          }
        }
        disabled={false}
        href="#"
      >
        Copy Link
      </DropdownItem>
    </DropdownButton>
    <div
      className="post-time"
    >
      a few seconds ago
    </div>
  </div>
  <img
    alt="more-icon"
    className="post-img"
    src="demo-img.png"
  />
  <ReactMarkdown
    astPlugins={Array []}
    className="post-content"
    escapeHtml={true}
    parserOptions={Object {}}
    plugins={
      Array [
        [Function],
      ]
    }
    rawSourcePos={false}
    renderers={Object {}}
    skipHtml={false}
    source="# Heading 1
## Heading 2
### Heading 3
#### Heading 4
##### Heading 5
###### Heading 6

1. Bullet 1
2. Bullet 2

[Google Link](https://www.google.com)

![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \\"Some logo\\")

Inline \`code\` 

\`\`\`
var s = \\"some code\\";
alert(s);
\`\`\`

| Tables        | Are           | Cool  |
| ------------- |:-------------:| -----:|
| col 3 is      | right-aligned | $1600 |
| col 2 is      | centered      |   $12 |
| zebra stripes | are neat      |    $1 |

> Blockquote

---

Normal Text
    "
    sourcePos={false}
    transformLinkUri={[Function]}
  />
  <div>
    <button
      aria-controls="post-comments"
      aria-expanded={false}
      className="post-show-comment"
      onClick={[Function]}
      type="button"
    >
      1
       
      comment
    </button>
    <Collapse
      appear={false}
      dimension="height"
      getDimensionValue={[Function]}
      in={false}
      mountOnEnter={false}
      timeout={300}
      unmountOnExit={false}
    >
      <div>
        <div
          id="comment-list"
        >
          <div
            key="95c76f63-5579-45f6-810f-e0665f2ea588"
          >
            <p>
              commentAuthor:
              <span
                className="comment-content"
              >
                Sample Comment
              </span>
            </p>
          </div>
        </div>
      </div>
    </Collapse>
    <form
      action="submit"
      className="make-comment-input-wrapper"
      onSubmit={[Function]}
    >
      <TextareaAutosize
        className="post-comment-text-area"
        inputRef={[Function]}
        onChange={[Function]}
        onHeightChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Add a comment"
        useCacheForDOMMeasurements={false}
        value=""
      />
    </form>
  </div>
</div>
`;
